# kplex

./: CMakeLists.txt
.history/: .gitignore_20200502222014
.history/src/: kplex_Color_20200502221822.cpp
result/: kplex.xls
scripts/: result.py  run.py  task.slurm
src/: BS.cpp  CMakeLists.txt  copyBS.cpp  kplex_CP.cpp  kplex_Col.cpp  kplex_Color.cpp
