file(MAKE_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)

ADD_EXECUTABLE(BS ${PROJECT_SOURCE_DIR}/src/BS.cpp)
ADD_EXECUTABLE(copyBS ${PROJECT_SOURCE_DIR}/src/copyBS.cpp)
ADD_EXECUTABLE(kplex_CP ${PROJECT_SOURCE_DIR}/src/kplex_CP.cpp)
ADD_EXECUTABLE(kplex_Col ${PROJECT_SOURCE_DIR}/src/kplex_Col.cpp)
ADD_EXECUTABLE(kplex_Color ${PROJECT_SOURCE_DIR}/src/kplex_Color.cpp)